feat: GetMany handler method & shared code deduplication
